2011-09-02  Vladimir Makarov  <vmakarov@redhat.com>

	Revert:
	2011-08-26  Vladimir Makarov  <vmakarov@redhat.com>
	* lra-constraints.c (best_reload_nregs): New variable.
	(process_alt_operands): Add preferences for smaller hard registers
	involved.  Increase reject for all failed non registers.

	* lra-eliminations.c (mark_not_eliminable): Add check on hard
	register before looping on eliminations.

2011-08-26  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (best_reload_nregs): New variable.
	(process_alt_operands): Add preferences for smaller hard registers
	involved.  Increase reject for all failed non registers.

	* lra-eliminations.c (mark_not_eliminable): Add check on hard
	register before looping on eliminations.

2011-08-25  Vladimir Makarov  <vmakarov@redhat.com>

	* lra.c (remove_scratches): Don't rescan insn.

2011-08-23  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-int.h (lra_debug_save_data): Remove.
	(lra_save_restore): Change the prototype.

	* lra.c (lra): Don't call df_analyze after lra_save_restore.
	Don't call lra_create_live_ranges before the loop.  Call
	lra_create_live_ranges before lra_spill if necessary.

	* lra-saves.c: Rewrite.

2011-08-04  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (uses_hard_regs_p): Use hard register
	elimination.

2011-08-03  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-int.h (lra_get_mode): Remove.

	* lra-constraints.c (find_mode, get_op_mode): New.
	(match_reload, curr_insn_transform, process_alt_operands): Use
	get_op_mode instead of lra_get_mode.

2011-08-02  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-assigns.c (find_hard_regno_for): Don't do hard register
	usage leveling for targets with conditional execution.

2011-07-29  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (LOSER_COST_FACTOR, MAX_OVERALL_COST_BOUND):
	New macros.
	(process_alt_operands): Use the macros.  Adjust losers and
	overall for reloads becuase of early clobbers.